--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,10 @@
     <application
         android:name="com.roman.batsu.utils.application.MyApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/icon_app"
+        android:icon="@mipmap/icon_app_new"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/icon_app_round"
+        android:roundIcon="@mipmap/icon_app_new"
 
         android:supportsRtl="false"
         android:theme="@style/AppTheme"
