--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,10 @@
     <application
         android:name="com.roman.batsu.utils.application.MyApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/icon_app_new"
+        android:icon="@mipmap/icon_app_news"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/icon_app_new"
+        android:roundIcon="@mipmap/icon_app_news"
 
         android:supportsRtl="false"
         android:theme="@style/AppTheme"
@@ -36,6 +36,7 @@
         <activity
             android:name="com.roman.batsu.MainActivity"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme.Launcher"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
