--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-simplexml:2.3.0'
 
     implementation 'androidx.browser:browser:1.2.0'
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.play:core:1.7.0'
 
     implementation 'com.github.GrenderG:Toasty:1.3.0'
