--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ android {
         versionCode 9
         versionName "1.0044"
         multiDexEnabled true
+        dataBinding {
+            enabled = true
+        }
 
     }
     buildTypes {
@@ -42,6 +45,9 @@ dependencies {
     //kotlin
     //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //implementation 'androidx.core:core-ktx:1.2.0'
+
+    //databinding
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
