--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
                 />
 
         </activity>
+
+        <service android:name="ExampleService"
+            android:exported="false" />
+
     </application>
 
 </manifest>
