--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:converter-simplexml:2.3.0'
 
+    implementation 'org.jsoup:jsoup:1.8.3'
+    
     implementation 'androidx.browser:browser:1.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.play:core:1.7.0'
