--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -47,35 +50,33 @@ dependencies {
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-simplexml:2.5.0'
-
-    implementation 'org.jsoup:jsoup:1.13.1'
-    
     implementation 'androidx.browser:browser:1.2.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.play:core:1.7.2'
 
-    implementation 'com.github.GrenderG:Toasty:1.3.0'
-
-    implementation 'com.github.jd-alexander:LikeButton:0.2.3'
-    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
-
+    //NETWORK
+    implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-simplexml:2.5.0'
 
-    //coroutines
+    //COROUTINES
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
-    //room
+
+    //KOTLIN AND KTX
+    implementation "androidx.fragment:fragment-ktx:1.2.4"
     implementation "androidx.core:core-ktx:1.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.71"
 
     //OTHER LIB
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.GrenderG:Toasty:1.3.0'
+    implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     implementation 'com.airbnb.android:lottie:2.8.0'
 }
 repositories {
