--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,9 @@ dependencies {
     implementation 'com.github.GrenderG:Toasty:1.3.0'
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     implementation 'com.airbnb.android:lottie:2.8.0'
+
+    implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
+    implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
 }
 repositories {
     mavenCentral()
